[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/PlaceHolders/heart_hurt.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/PlaceHolders/heartvoid.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/PlaceHolders/heart.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Uingame.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/8-bit Arcade In.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sprites/moneda.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 7.5
} ]

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 90 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=14]
size = 96
font_data = ExtResource( 5 )

[node name="Uingame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1Base" type="Sprite" parent="Hearts"]
material = SubResource( 1 )
position = Vector2( 1161.97, 65.6867 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Heart" type="Sprite" parent="Hearts/Heart1Base"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Damage" type="AnimatedSprite" parent="Hearts/Heart1Base"]
visible = false
material = SubResource( 2 )
frames = SubResource( 7 )

[node name="Heart2Base" type="Sprite" parent="Hearts"]
material = SubResource( 1 )
position = Vector2( 1096.97, 130.74 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Heart" type="Sprite" parent="Hearts/Heart2Base"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Damage" type="AnimatedSprite" parent="Hearts/Heart2Base"]
visible = false
material = SubResource( 2 )
frames = SubResource( 7 )

[node name="Heart3Base" type="Sprite" parent="Hearts"]
material = SubResource( 1 )
position = Vector2( 1189.01, 157.538 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Heart" type="Sprite" parent="Hearts/Heart3Base"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Damage" type="AnimatedSprite" parent="Hearts/Heart3Base"]
visible = false
material = SubResource( 2 )
frames = SubResource( 7 )

[node name="Pause" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Coins" type="Control" parent="Pause"]
material = SubResource( 8 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pause/Coins"]
use_parent_material = true
position = Vector2( 84, 102 )
frames = SubResource( 13 )
frame = 1
playing = true

[node name="Label" type="Label" parent="Pause/Coins"]
use_parent_material = true
margin_left = 137.0
margin_top = 59.0
margin_right = 185.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.533333, 0.772549, 0.717647, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Hearts/Heart1Base/Damage" to="." method="_on_Damage_animation_finished"]
[connection signal="animation_finished" from="Hearts/Heart2Base/Damage" to="." method="_on_Damage_animation_finished2"]
[connection signal="animation_finished" from="Hearts/Heart3Base/Damage" to="." method="_on_Damage_animation_finished3"]
